# capability-isolation

./: .gitignore  pyproject.toml
.cursor/rules/: project-conventions.mdc  python-standards.mdc
src/: __init__.py  classifier.py  config.py  data.py  gate.py  system.py  train_classifier.py  train_gate.py  train_system.py  utils.py
src/cifar/: __init__.py  data.py  system.py  train_naive_system.py  train_resnet.py  train_safety_classifier.py  unlearn.py
src/cifar/notebooks/: accuracy_vs_typicality.py  class_typicality_extremes.py  compare_pareto.py  compare_typicality.py  compute_class_distances.py  k_dang_grid.py
src/scripts/: cifar.py  experiment_1.ipynb  experiment_2.ipynb  notebook.py  test_entanglement.py  unlearn.py
